@@ -737,6 +737,7 @@ alias_pdef=Any time
 alias_psel=On date
 alias_estart=Invalid automatic reply start date
 alias_eend=Invalid automatic reply end date
+alias_aopts=Automatic reply options
 
 stop_ecannot=You are not allowed to stop services
 stop_err=Failed to stop service
